# MIMI

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  build.gradle  gradle.properties  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle  config_buildtypes.gradle  config_product_flavors.gradle  proguard-rules.pro  version.properties
app/gradle/wrapper/: gradle-wrapper.properties
app/mimi/sit_release/: output-metadata.json
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: aes.h  native-lib.cpp
app/src/main/jni/AES/: aes_core.cpp  aes_ecb.cpp  aes_misc.cpp
app/src/main/jni/include/: aes.h
app/src/main/res/anim/: anim_shake.xml
app/src/main/res/color/: bottom_nav_adult_text_selector.xml  bottom_nav_clip_text_selector.xml  bottom_nav_normal_text_selector.xml  cb_selector.xml  item_setting_bar_bg_selector.xml  item_setting_bar_text_selector.xml  my_post_bg_selector.xml  post_text_selector.xml  tv_clean_selector.xml
app/src/main/res/drawable/: adult_btn_back.xml  adult_btn_search.xml  bg_actor_videos_tv_total_video.xml  bg_adult_comment_bottom_radius_10.xml  bg_adult_comment_top_radius_10.xml  bg_adult_top_line.xml  bg_black_1.xml  bg_black_1_05.xml  bg_black_1_30_radius_18.xml  bg_black_1_50_radius_4.xml  bg_black_1_oval.xml  bg_black_1_radius_6.xml  bg_black_2_radius_6.xml  bg_black_stroke_1_radius_2.xml  bg_black_stroke_1_radius_4.xml  bg_blue_1_oval.xml  bg_blue_1_radius_25_5.xml  bg_blue_1_radius_6.xml  bg_blue_2_radius_6.xml  bg_cancel.xml  bg_chat_edit_selector.xml  bg_checkbox_1.xml  bg_coin.xml  bg_comment_dialog.xml  bg_comment_top_radius_10.xml  bg_follow_fnas.xml  bg_gray_10_stroke_1.xml  bg_gray_10_stroke_1_radius_4.xml  bg_gray_12_radius_6.xml  bg_gray_13_radius_5.xml  bg_gray_13_radius_6.xml  bg_gray_16_radius_4.xml  bg_gray_16_stroke_1.xml  bg_gray_1_30_radius_18.xml  bg_gray_1_radius_18.xml  bg_gray_1_radius_6.xml  bg_gray_1_stroke_radius_4.xml  bg_gray_2_radius_16.xml  bg_gray_2_top_line.xml  bg_gray_6_radius_16.xml  (+171 more)
app/src/main/res/drawable-hdpi/: chk_filter_check.xml  post_text_rectangle.xml
app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_player.xml  badged_tab.xml  chip_item.xml  custom_clip_timebar.xml  custom_menu_badge.xml  custom_tab.xml  (+253 more)
(+1180 files in other folders)
